<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_app_55"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            android:padding="10dp"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:src="@drawable/pic_logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/layout_divider_gray"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    style="@style/text_normal_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="5"
                    android:text="@string/login_name" />

                <com.shouxiu.wanandroid.view.ClearEditText
                    android:id="@+id/edt_userName"
                    style="@style/edt_normal_theme"
                    android:background="@color/white"
                    android:hint="@string/plz_input_username"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textCursorDrawable="@drawable/color_cursor"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    style="@style/text_normal_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="5"
                    android:text="@string/login_pass_word" />

                <com.shouxiu.wanandroid.view.ClearEditText
                    android:id="@+id/edt_passwd"
                    style="@style/edt_normal_theme"
                    android:hint="@string/plz_input_pass_word"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:layout_weight="1.0"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.shouxiu.wanandroid.view.NoDoubleClickButton
        android:id="@+id/btn_login"
        style="@style/btn_green_theme"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_registByMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1.0"
            android:clickable="true"
            android:text="@string/quick_regist_by_mobile"
            android:textColor="@color/blue_app" />

        <TextView
            android:id="@+id/tv_forgetPWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:text="@string/text_forget_password"
            android:textColor="@color/blue_app" />
    </LinearLayout>
</LinearLayout>